Fix add view menu
- make it shorter
- prevent it from overflowing

--- a/app/assets/stylesheets/tabs/_entity_list.css.sass
+++ b/app/assets/stylesheets/tabs/_entity_list.css.sass
@@ -48,10 +48,13 @@
   .tab-main
     .left-nav
       overflow-y: auto
+      overflow-x: hidden
       @extend .tab-workbench
       padding-left: 20px
       padding-right: 20px
       padding: $tab-main-margin-top 20px 0
+      .dropdown-menu
+        min-width: 150px
     .with-left-nav
       margin-top: $tab-main-margin-top // padding is ignored by absolute children
       @extend .tab-workbench
